[tool.poetry]
name = "maestro_pizza_maker"
version = "202304.1001"
description = ""
authors = ["Martin Tlapak <martin.tlapak@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^2.0.1"
pytest = "^6.2.0"
notebook = "^6.5.4"
mip = "^1.15.0"
uuid = "^1.30"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

